--- a/site/package.json
+++ b/site/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "next": "^13.2.4",
+    "next-auth": "^4.24.11",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^9.1.2"
   },
   "devDependencies": {
