--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.8",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^12.4.7",
     "next": "^13.2.4",
     "next-auth": "^4.24.11",
     "nprogress": "^0.2.0",
