--- a/site/package.json
+++ b/site/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
     "framer-motion": "^12.4.7",
     "next": "^13.2.4",
     "next-auth": "^4.24.11",
@@ -25,6 +23,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.1.7",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
   }
