--- a/site/package.json
+++ b/site/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.476.0",
     "next": "^13.2.4",
     "next-auth": "^4.24.11",
     "nprogress": "^0.2.0",
@@ -19,7 +21,9 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
