--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.4.7",
+    "jsrepo": "^1.45.1",
     "lucide-react": "^0.476.0",
     "next": "^13.5.9",
     "next-auth": "^4.24.11",
