--- a/site/package.json
+++ b/site/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.4.7",
+    "jsonwebtoken": "^9.0.2",
     "jsrepo": "^1.45.1",
     "lucide-react": "^0.476.0",
     "next": "^13.5.9",
