--- a/site/.gitignore
+++ b/site/.gitignore
@@ -1,17 +1,15 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
-./node_modules
-node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
 
-# build or export
+# next.js
 /.next/
-./.next
-.next
 /out/
 
 # production
@@ -25,13 +23,19 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*.local
-.env
 .env.local
-
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# babel config we don't need
+.babelrc
