--- a/site/.eslintrc.json
+++ b/site/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": ["next/core-web-vitals"],
-  "root": true,
-  "rules": {
-    "no-unused-vars": "warn"
-  }
+  "extends": ["next/core-web-vitals"]
 }
