--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.4.7",
+    "isomorphic-unfetch": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "jsrepo": "^1.45.1",
     "lucide-react": "^0.476.0",
