--- a/site/vercel.json
+++ b/site/vercel.json
@@ -1,10 +1,7 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "github": {
-    "silent": true
-  }
+  "outputDirectory": ".next"
 }
